# ocaml-graphql-server

./: .gitignore  .merlin  .ocamlformat  .travis.yml  CHANGES.md  Graphql.Parser.html  Graphql.Schema.html  Graphql.html  Graphql_async.Schema.html  Graphql_async.html  Graphql_intf.Schema.Arg.html  Graphql_intf.Schema.html  Graphql_intf.html  Graphql_lwt.Schema.html  Graphql_lwt.html  Graphql_parser.html  Graphql_schema.IO.html  Graphql_schema.Make.html  Graphql_schema.html  README.md  _tags  dune-project  executer.ml  executer.mli  flake.nix  graphql-async.descr  graphql-async.opam  graphql-cohttp.opam  graphql-eio.opam  graphql-lwt.descr  graphql-lwt.opam  graphql-ppx.descr  graphql-ppx.opam  graphql.descr  graphql.mli  graphql.mllib  graphql.opam  graphql_parser.ml  graphql_parser.opam  html.stamp  (+33 more)
.github/: dependabot.yaml
.github/workflows/: ci.yaml  test.yml
_html/: index.html
_html/graphql/: index.html
_html/graphql-async/: index.html
_html/graphql-async/Graphql_async/: index.html
_html/graphql-cohttp/: index.html
_html/graphql-cohttp/Assets/: index.html
_html/graphql-cohttp/Graphql_cohttp/: index.html
_html/graphql-cohttp/Websocket/: index.html
_html/graphql-cohttp/Websocket_handler/: index.html
_html/graphql-lwt/: index.html
_html/graphql-lwt/Graphql_lwt/: index.html
_html/graphql/Graphql/: index.html
_html/graphql/Graphql_intf/: index.html
_html/graphql/Graphql_schema/: index.html
_html/graphql_parser/: index.html
_html/graphql_parser/Graphql_parser/: index.html
_html/graphql_parser/Graphql_parser__/: index.html
_html/graphql_parser/Graphql_parser__Ast/: index.html
_html/graphql_parser/Graphql_parser__Lexer/: index.html
_html/graphql_parser/Graphql_parser__Parser/: index.html
_mlds/graphql/: index.mld
_mlds/graphql-async/: index.mld
_mlds/graphql-cohttp/: index.mld
_mlds/graphql-lwt/: index.mld
_mlds/graphql_parser/: index.mld
_odoc/lib/graphql/: graphql.odoc  graphql_intf.odoc  graphql_schema.odoc
_odoc/lib/graphql-async/: graphql_async.odoc
_odoc/lib/graphql-cohttp/: assets.odoc  graphql_cohttp.odoc  websocket.odoc  websocket_handler.odoc
_odoc/lib/graphql-lwt/: graphql_lwt.odoc
_odoc/lib/graphql_parser/: graphql_parser.odoc  graphql_parser__.odoc  graphql_parser__Ast.odoc  graphql_parser__Lexer.odoc  graphql_parser__Parser.odoc
_odoc/pkg/graphql/: page-index.odoc
_odoc/pkg/graphql-async/: page-index.odoc
_odoc/pkg/graphql-cohttp/: page-index.odoc
_odoc/pkg/graphql-lwt/: page-index.odoc
_odoc/pkg/graphql_parser/: page-index.odoc
doc/: Graphql.Schema.html  Graphql.html  api.odocl  index_classes.html  index_extensions.html  index_modules.html  index_types.html
examples/: _tags  dune  index.html  jbuild  server.ml
examples/cohttp/: dune
examples/opium/: dune  graphql_opium.ml  schema.ml  server.ml
graphql/: index.html
graphql-async/: index.html
graphql-async/Graphql_async/: index.html
graphql-async/Graphql_async/Schema/: index.html
graphql-async/src/: .merlin  dune  graphql_async.ml  graphql_async.mli  jbuild
graphql-async/test/: .merlin  async_test.ml  dune  jbuild
graphql-cohttp/: index.html
graphql-cohttp/Assets/: index.html
graphql-cohttp/Assets/Internal/: index.html
graphql-cohttp/Graphql_cohttp/: index.html
graphql-cohttp/Graphql_cohttp/Make/: index.html
graphql-cohttp/Graphql_cohttp/module-type-HttpBody/: index.html
graphql-cohttp/Graphql_cohttp/module-type-S/: index.html
graphql-cohttp/Graphql_websocket/: index.html
graphql-cohttp/Websocket/: index.html
graphql-cohttp/Websocket_handler/: index.html
graphql-cohttp/src/: dune  graphql_cohttp.ml  graphql_cohttp.mli  jbuild  websocket.ml  websocket.mli  websocket_handler.ml
graphql-cohttp/test/: dune  request_test.ml  test.ml
graphql-eio/src/: dune  graphql_eio.ml  graphql_eio.mli
graphql-eio/test/: dune  eio_test.ml
graphql-lwt/: index.html
graphql-lwt/Assets/: index.html
graphql-lwt/Graphql_lwt/: index.html
graphql-lwt/src/: .merlin  dune  graphql_lwt.ml  graphql_lwt.mli  jbuild
graphql-lwt/test/: .merlin  dune  jbuild  lwt_test.ml
graphql-ppx/examples/: github.ml  jbuild  schema.json
graphql-ppx/src/: graphql_ppx.ml  introspection.ml  jbuild
graphql-ppx/test/: generate_schema.js  integration_test.ml  jbuild  parsing_test.ml  schema.graphql  schema.json  test.ml  test_helper.ml  variables_test.ml
graphql/Graphql/: index.html
graphql/Graphql_intf/: index.html
graphql/Graphql_parser/: index.html
graphql/Graphql_schema/: index.html
graphql/src/: .merlin  dune  graphql.ml  graphql.mli  graphql_intf.ml  graphql_parser.ml  graphql_schema.ml  graphql_schema.mli  graphql_server.ml  graphql_server.mli  jbuild
graphql/test/: .merlin  abstract_test.ml  argument_test.ml  custom_error_test.ml  directives_test.ml  dune  echo_schema.ml  error_test.ml  introspection_test.ml  jbuild  parser_test.ml  schema_test.ml  test.ml  test_common.ml  test_schema.ml  variable_test.ml
graphql/test/data/: kitchen_sink.graphql
graphql_parser/: index.html
graphql_parser/Graphql_parser/: index.html
graphql_parser/Graphql_parser__/: index.html
graphql_parser/Graphql_parser__Ast/: index.html
graphql_parser/Graphql_parser__Lexer/: index.html
graphql_parser/Graphql_parser__Parser/: index.html
graphql_parser/src/: ast.ml  block_string.ml  dune  graphql_ast.ml  graphql_grammar.mly  graphql_lexer.mll  graphql_parser.ml  graphql_parser.mli  jbuild  lexer.mll  parser.mly
graphql_parser/test/: dune  jbuild  parser_test.ml  test.ml
nix/: default.nix  generic.nix  sources.nix
nix/ci/: test.nix
pkg/: META  pkg.ml
src/: graphql.ml  graphql.mli  graphql.mllib  graphql_async.ml  graphql_async.mli  graphql_async.mllib  graphql_intf.ml  graphql_lwt.ml  graphql_lwt.mli  graphql_lwt.mllib  graphql_parser.ml  graphql_parser.mli  graphql_schema.ml  graphql_schema.mli
test/: argument_test.ml  async_test.ml  echo_schema.ml  lwt_test.ml  parser_test.ml  schema_test.ml  test.ml  test_common.ml  test_schema.ml  variable_test.ml
test/data/: introspection.graphql  introspection.sexp  kitchen_sink.sexp
(+125 files in other folders)
