opam-version: "1.2"
maintainer: "Andreas Garnaes <andreas.garnaes@gmail.com>"
authors: "Andreas Garnaes <andreas.garnaes@gmail.com>"
homepage: "https://github.com/andreas/ocaml-graphql-server"
doc: "https://andreas.github.io/ocaml-graphql-server/"
bug-reports: "https://github.com/andreas/ocaml-graphql-server/issues"
dev-repo: "https://github.com/andreas/ocaml-graphql-server.git"
build: [["jbuilder" "build" "-p" name "-j" jobs]]
build-test: [["jbuilder" "runtest" "-p" name "-j" jobs]]
depends: [
  "jbuilder" {build}
  "angstrom" {>= "0.4.0"}
  "sexplib"
  "ppx_sexp_conv" {>= "0.9.0"}
  "yojson"
  "rresult"
  "alcotest" {test}
]
available: [
  ocaml-version >= "4.03.0"
]
