(library
 (name graphql_test)
 (wrapped false)
 (modules
  echo_schema
  schema_test
  test_common
  test_schema
  variable_test
  argument_test
  introspection_test
  error_test
  abstract_test
  directives_test)
 (libraries graphql alcotest)
 (flags (:standard -w -9)))

(executable
 (libraries graphql_test)
 (modules test)
 (name test))

(alias
 (name runtest)
 (package graphql)
 (deps (:test test.exe))
 (action (run %{test} -v)))
